CHANGES
*******

1.0b6
=====

* Template language renaming: 

  * ``data-each`` was renamed to ``data-repeat`` and ``@each`` to
    ``@repeat``.
 
  * ``data-view`` becomes ``data-render``, as it really calls Obviel's
    ``render()`` function to render an object.

  A simple search and replace in your templates for these names should
  be enough to update your templates.

1.0b5 (2013-01-18)
==================

* The default HTTP error hook shouldn't do an alert; it's now quiet.

* Fix a bug in obviel forms that caused errors not to be displayed
  properly for fields in Internet Explorer.

1.0b4 (2013-01-09)
==================

* the autocomplete widget was not sending 'change' events correctly when 
  the autocomplete field received the 'blur' or 'close' event. With previous
  jQuery versions this was okay, but this broke with jQuery 1.7.x.

* new functionality to set an ``httpErrorHook`` function, which is
  called when a HTTP error occurs when a URL is resolved using
  ``.render()``. It is called with an ``xhr`` (``jqXHR``) object as
  the first argument. 

* The ``httpErrorHook`` functionality is also used by the autocomplete
  widget when a URL is in use as a data source.

* The ``httpErrorHook`` functionality is also used by the
  ``validationUrl`` option for Obviel forms.

* Now correctly make deferred returned by ``.render()`` fail when
  there is a problem resolving URLs during rendering, including when
  sub-views are in use.

1.0b3 (2012-12-06)
==================

* Switch to the Buster.JS test framework and the Sinon.JS mocking
  library. See :doc:`the development documentation <development>` for
  more information.

* obviel-forms now uses Bootstrap_ CSS classes. If Bootstrap CSS is included
  on a page, the forms will render with pretty form widgts.

  .. _Bootstrap: http://twitter.github.com/bootstrap/

* Removed js.obviel Fanstatic_ packaging. Instead moved this to a
  `separate project`_, just like other Fanstatic projects.
