@@ -441,8 +441,8 @@ Everything is in the ``obviel.template`` namespace.
   starts up (per page), before any templates are compiled. Note that
   with Obviel you can use view methods as funcs
 
-  :param string name: the name of the func. This is how it is
-    addressed in the template language (using ``data-func="funcName"``).
+  :param string name: the name of the function. This is how it is
+    addressed in the template language (using ``data-call="funcName"``).
   :param function func:  the function that manipulates the element. This 
     function takes 1 to 3 arguments: the jQuery element ``el`` to manipulate, 
     a ``variable`` resolver function (optional) and a ``context``
@@ -515,7 +515,7 @@ Everything is in the ``obviel.template`` namespace.
         function will get three arguments: the element to manipulate,
         a variable lookup function and a context. If no func can be
         found by that name, ``null`` or ``undefined`` should be
-        returned. Used by ``data-func`` to look up the func. If no
+        returned. Used by ``data-call`` to look up the func. If no
         ``getFunc`` is supplied, the template engine will use
         globally registred funcs (using
         ``obviel.template.registerFunc``). See also
