@@ -63,7 +63,7 @@
 
     <script type="text/template" id="obvt-todo">
       <div data-handler="dblclick|edit" class="view">
-        <input data-handler="click|toggle" data-func="checked" class="toggle" type="checkbox" />
+        <input data-handler="click|toggle" data-call="checked" class="toggle" type="checkbox" />
         <label>{title}</label>
         <a data-handler="click|clear" class="destroy"></a>
       </div>
